--- a/app/src/main/res/layout/item_celula.xml
+++ b/app/src/main/res/layout/item_celula.xml
@@ -19,7 +19,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_centerInParent="true"
-            android:src="@mipmap/ic_logo_foreground" />
+            android:src="@color/transparent"
+            android:contentDescription="@string/empty" />
 
         <TextView
             android:id="@+id/tvNombreCelula"
